--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ffffff'%3E%3Ccircle cx='12' cy='12' r='10'/%3E%3Ctext x='12' y='16' font-size='10' text-anchor='middle' fill='%23000000'%24'%24'%24'%24'%24'%3E$%3C/text%3E%3C/svg%3E">
+
 </head>
 <body>
     <div class="container">
@@ -105,5 +107,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
